[gd_scene load_steps=11 format=3 uid="uid://bnmrhetgl7m1k"]

[ext_resource type="Theme" uid="uid://djuo54pavaq3o" path="res://Themes/Right_menu/Right_main.tres" id="1_ivjal"]
[ext_resource type="Script" path="res://Scripts/Right_menus/Right_menu_models.gd" id="1_j6t30"]
[ext_resource type="Theme" uid="uid://d3n6kqhglrbq2" path="res://Themes/Empty/Empty.tres" id="2_4io77"]
[ext_resource type="Texture2D" uid="uid://5cgc26diyh17" path="res://Icons/Right_menu/Right_menu_model/Model_icon_right_menu.png" id="3_1c3qb"]
[ext_resource type="Theme" uid="uid://dv348k1c8tv3g" path="res://Themes/Right_menu/Right_block_button.tres" id="4_nopp8"]
[ext_resource type="Texture2D" uid="uid://dkul5tf0y120f" path="res://Icons/Info/Load.png" id="5_cd6ky"]
[ext_resource type="ButtonGroup" uid="uid://cmunyg4h8107m" path="res://Themes/Button_groups/save_cancel_delete_right.tres" id="6_3vntf"]
[ext_resource type="Theme" uid="uid://c7lw0hs4y1ef2" path="res://Themes/Right_menu/Right_delete.tres" id="7_867c3"]
[ext_resource type="Texture2D" uid="uid://gcu7i8nrv8hi" path="res://Icons/Right_menu/Close.png" id="8_7w183"]
[ext_resource type="Theme" uid="uid://vc1tuyx0v5cj" path="res://Themes/Right_menu/Shadow.tres" id="9_am6s6"]

[node name="Right_menu_model" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j6t30")

[node name="Right_menu" type="Panel" parent="."]
custom_minimum_size = Vector2(643, 1080)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.665104
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ivjal")
metadata/_edit_use_anchors_ = true

[node name="Main" type="VBoxContainer" parent="Right_menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 29.0
offset_top = 52.0
offset_right = -29.0004
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ivjal")

[node name="Menu_name" type="HBoxContainer" parent="Right_menu/Main"]
layout_mode = 2
theme = ExtResource("1_ivjal")

[node name="Space" type="Panel" parent="Right_menu/Main/Menu_name"]
custom_minimum_size = Vector2(135, 0)
layout_mode = 2
theme = ExtResource("2_4io77")

[node name="Name" type="Label" parent="Right_menu/Main/Menu_name"]
custom_minimum_size = Vector2(308, 36)
layout_mode = 2
theme = ExtResource("1_ivjal")
text = "Карточка модели"
horizontal_alignment = 1

[node name="Name_H" type="ColorRect" parent="Right_menu/Main/Menu_name/Name"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 0
offset_left = -37.0
offset_top = 39.0
offset_right = 352.0
offset_bottom = 41.0
theme = ExtResource("1_ivjal")
color = Color(0.54902, 0.576471, 0.603922, 1)

[node name="Name_V" type="ColorRect" parent="Right_menu/Main/Menu_name/Name"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 0
offset_left = -37.0
offset_right = 4.0
offset_bottom = 2.0
rotation = 1.5708
theme = ExtResource("1_ivjal")
color = Color(0.54902, 0.576471, 0.603922, 1)

[node name="V_Name" type="ColorRect" parent="Right_menu/Main/Menu_name/Name"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 0
offset_left = -71.0
offset_top = -52.0
offset_right = 2.0
offset_bottom = -50.0
rotation = 1.5708
theme = ExtResource("1_ivjal")
color = Color(0.54902, 0.576471, 0.603922, 1)

[node name="H_Name" type="ColorRect" parent="Right_menu/Main/Menu_name/Name"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 0
offset_left = -71.0
offset_top = 19.0
offset_right = -39.0
offset_bottom = 21.0
theme = ExtResource("1_ivjal")
color = Color(0.54902, 0.576471, 0.603922, 1)

[node name="Space2" type="Panel" parent="Right_menu/Main/Menu_name"]
custom_minimum_size = Vector2(135, 0)
layout_mode = 2
theme = ExtResource("2_4io77")

[node name="Space" type="Panel" parent="Right_menu/Main"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_4io77")

[node name="Load" type="HBoxContainer" parent="Right_menu/Main"]
layout_mode = 2
theme = ExtResource("1_ivjal")

[node name="Space" type="Panel" parent="Right_menu/Main/Load"]
custom_minimum_size = Vector2(223, 0)
layout_mode = 2
theme = ExtResource("2_4io77")

[node name="Panel_for_icon" type="Panel" parent="Right_menu/Main/Load"]
custom_minimum_size = Vector2(141, 143)
layout_mode = 2
theme = ExtResource("1_ivjal")

[node name="Load_H" type="ColorRect" parent="Right_menu/Main/Load/Panel_for_icon"]
custom_minimum_size = Vector2(222, 2)
layout_mode = 2
offset_left = 140.0
offset_top = 71.0
offset_right = 362.0
offset_bottom = 73.0
theme = ExtResource("1_ivjal")
color = Color(0.54902, 0.576471, 0.603922, 1)

[node name="UserRightMenu" type="Sprite2D" parent="Right_menu/Main/Load/Panel_for_icon"]
position = Vector2(70.677, 71.4219)
texture = ExtResource("3_1c3qb")

[node name="Space2" type="Panel" parent="Right_menu/Main/Load"]
custom_minimum_size = Vector2(95, 0)
layout_mode = 2
theme = ExtResource("2_4io77")

[node name="Load" type="VBoxContainer" parent="Right_menu/Main/Load"]
layout_mode = 2
theme = ExtResource("1_ivjal")

[node name="Space" type="Panel" parent="Right_menu/Main/Load/Load"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_4io77")

[node name="Load_text" type="HBoxContainer" parent="Right_menu/Main/Load/Load"]
layout_mode = 2
theme = ExtResource("1_ivjal")

[node name="Space" type="Panel" parent="Right_menu/Main/Load/Load/Load_text"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme = ExtResource("2_4io77")

[node name="Avatar_text" type="Label" parent="Right_menu/Main/Load/Load/Load_text"]
custom_minimum_size = Vector2(47, 20)
layout_mode = 2
theme = ExtResource("1_ivjal")
theme_override_font_sizes/font_size = 13
text = "ЗАГРУЗИТЬ"

[node name="Space2" type="Panel" parent="Right_menu/Main/Load/Load"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme = ExtResource("2_4io77")

[node name="Load" type="HBoxContainer" parent="Right_menu/Main/Load/Load"]
layout_mode = 2
theme = ExtResource("1_ivjal")

[node name="Space" type="Panel" parent="Right_menu/Main/Load/Load/Load"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme = ExtResource("2_4io77")

[node name="Load" type="Button" parent="Right_menu/Main/Load/Load/Load"]
custom_minimum_size = Vector2(27, 24)
layout_mode = 2
theme = ExtResource("4_nopp8")
toggle_mode = true
icon = ExtResource("5_cd6ky")
icon_alignment = 1

[node name="Space2" type="Panel" parent="Right_menu/Main"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
theme = ExtResource("2_4io77")

[node name="Model_name" type="HBoxContainer" parent="Right_menu/Main"]
layout_mode = 2
theme = ExtResource("1_ivjal")

[node name="Space" type="Panel" parent="Right_menu/Main/Model_name"]
custom_minimum_size = Vector2(23, 0)
layout_mode = 2
theme = ExtResource("2_4io77")

[node name="Name_model_text" type="Label" parent="Right_menu/Main/Model_name"]
custom_minimum_size = Vector2(28, 20)
layout_mode = 2
theme = ExtResource("1_ivjal")
theme_override_font_sizes/font_size = 13
text = "НАЗВАНИЕ МОДЕЛИ"

[node name="Space3" type="Panel" parent="Right_menu/Main"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
theme = ExtResource("2_4io77")

[node name="Model_name_placeholder" type="HBoxContainer" parent="Right_menu/Main"]
layout_mode = 2
theme = ExtResource("1_ivjal")

[node name="Space" type="Panel" parent="Right_menu/Main/Model_name_placeholder"]
custom_minimum_size = Vector2(58, 0)
layout_mode = 2
theme = ExtResource("2_4io77")

[node name="Name_edit" type="LineEdit" parent="Right_menu/Main/Model_name_placeholder"]
custom_minimum_size = Vector2(112, 31)
layout_mode = 2
theme = ExtResource("1_ivjal")
placeholder_text = "Введите название модели"
max_length = 52
expand_to_text_length = true
caret_blink = true

[node name="Hs_model_name" type="ColorRect" parent="Right_menu/Main/Model_name_placeholder/Name_edit"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 0
offset_left = -56.0
offset_top = 13.0
offset_right = -15.0
offset_bottom = 15.0
theme = ExtResource("1_ivjal")
color = Color(0.54902, 0.576471, 0.603922, 1)

[node name="V_model_name" type="ColorRect" parent="Right_menu/Main/Model_name_placeholder/Name_edit"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 0
offset_left = -56.0
offset_top = -10.0
offset_right = -31.0
offset_bottom = -8.0
rotation = 1.5708
theme = ExtResource("1_ivjal")
color = Color(0.54902, 0.576471, 0.603922, 1)

[node name="HL_model_name" type="ColorRect" parent="Right_menu/Main/Model_name_placeholder/Name_edit"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 0
offset_left = -58.0
offset_top = -12.0
offset_right = 527.0
offset_bottom = -10.0
theme = ExtResource("1_ivjal")
color = Color(0.54902, 0.576471, 0.603922, 1)

[node name="Space4" type="Panel" parent="Right_menu/Main"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
theme = ExtResource("2_4io77")

[node name="Model_control_sum" type="HBoxContainer" parent="Right_menu/Main"]
layout_mode = 2
theme = ExtResource("1_ivjal")

[node name="Space" type="Panel" parent="Right_menu/Main/Model_control_sum"]
custom_minimum_size = Vector2(23, 0)
layout_mode = 2
theme = ExtResource("2_4io77")

[node name="Control_suml_text" type="Label" parent="Right_menu/Main/Model_control_sum"]
custom_minimum_size = Vector2(28, 20)
layout_mode = 2
theme = ExtResource("1_ivjal")
theme_override_font_sizes/font_size = 13
text = "КОНТРОЛЬНАЯ СУММА"

[node name="Space5" type="Panel" parent="Right_menu/Main"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
theme = ExtResource("2_4io77")

[node name="Model_control_sum_placeholder" type="HBoxContainer" parent="Right_menu/Main"]
layout_mode = 2
theme = ExtResource("1_ivjal")

[node name="Space" type="Panel" parent="Right_menu/Main/Model_control_sum_placeholder"]
custom_minimum_size = Vector2(58, 0)
layout_mode = 2
theme = ExtResource("2_4io77")

[node name="Control_sum_edit" type="LineEdit" parent="Right_menu/Main/Model_control_sum_placeholder"]
custom_minimum_size = Vector2(112, 31)
layout_mode = 2
theme = ExtResource("1_ivjal")
placeholder_text = "Введите контрольную сумму"
max_length = 52
expand_to_text_length = true
caret_blink = true

[node name="Hs_Control_sum" type="ColorRect" parent="Right_menu/Main/Model_control_sum_placeholder/Control_sum_edit"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 0
offset_left = -56.0
offset_top = 13.0
offset_right = -15.0
offset_bottom = 15.0
theme = ExtResource("1_ivjal")
color = Color(0.54902, 0.576471, 0.603922, 1)

[node name="V_Control_sum" type="ColorRect" parent="Right_menu/Main/Model_control_sum_placeholder/Control_sum_edit"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 0
offset_left = -56.0
offset_top = -10.0
offset_right = -31.0
offset_bottom = -8.0
rotation = 1.5708
theme = ExtResource("1_ivjal")
color = Color(0.54902, 0.576471, 0.603922, 1)

[node name="HL_Control_sum" type="ColorRect" parent="Right_menu/Main/Model_control_sum_placeholder/Control_sum_edit"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 0
offset_left = -58.0
offset_top = -12.0
offset_right = 527.0
offset_bottom = -10.0
theme = ExtResource("1_ivjal")
color = Color(0.54902, 0.576471, 0.603922, 1)

[node name="Space6" type="Panel" parent="Right_menu/Main"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
theme = ExtResource("2_4io77")

[node name="Model_author" type="HBoxContainer" parent="Right_menu/Main"]
layout_mode = 2
theme = ExtResource("1_ivjal")

[node name="Space" type="Panel" parent="Right_menu/Main/Model_author"]
custom_minimum_size = Vector2(23, 0)
layout_mode = 2
theme = ExtResource("2_4io77")

[node name="Author_text" type="Label" parent="Right_menu/Main/Model_author"]
custom_minimum_size = Vector2(28, 20)
layout_mode = 2
theme = ExtResource("1_ivjal")
theme_override_font_sizes/font_size = 13
text = "ИМЯ АВТОРА"

[node name="Space7" type="Panel" parent="Right_menu/Main"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
theme = ExtResource("2_4io77")

[node name="Model_author_placeholder" type="HBoxContainer" parent="Right_menu/Main"]
layout_mode = 2
theme = ExtResource("1_ivjal")

[node name="Space" type="Panel" parent="Right_menu/Main/Model_author_placeholder"]
custom_minimum_size = Vector2(58, 0)
layout_mode = 2
theme = ExtResource("2_4io77")

[node name="author_edit" type="LineEdit" parent="Right_menu/Main/Model_author_placeholder"]
custom_minimum_size = Vector2(112, 31)
layout_mode = 2
theme = ExtResource("1_ivjal")
placeholder_text = "Введите имя автора"
max_length = 52
expand_to_text_length = true
caret_blink = true

[node name="Hs_model_author" type="ColorRect" parent="Right_menu/Main/Model_author_placeholder/author_edit"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 0
offset_left = -56.0
offset_top = 13.0
offset_right = -15.0
offset_bottom = 15.0
theme = ExtResource("1_ivjal")
color = Color(0.54902, 0.576471, 0.603922, 1)

[node name="V_model_author" type="ColorRect" parent="Right_menu/Main/Model_author_placeholder/author_edit"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 0
offset_left = -56.0
offset_top = -10.0
offset_right = -31.0
offset_bottom = -8.0
rotation = 1.5708
theme = ExtResource("1_ivjal")
color = Color(0.54902, 0.576471, 0.603922, 1)

[node name="HL_model_author" type="ColorRect" parent="Right_menu/Main/Model_author_placeholder/author_edit"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 0
offset_left = -58.0
offset_top = -12.0
offset_right = 527.0
offset_bottom = -10.0
theme = ExtResource("1_ivjal")
color = Color(0.54902, 0.576471, 0.603922, 1)

[node name="Space8" type="Panel" parent="Right_menu/Main"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
theme = ExtResource("2_4io77")

[node name="Model_load_date" type="HBoxContainer" parent="Right_menu/Main"]
layout_mode = 2
theme = ExtResource("1_ivjal")

[node name="Space" type="Panel" parent="Right_menu/Main/Model_load_date"]
custom_minimum_size = Vector2(23, 0)
layout_mode = 2
theme = ExtResource("2_4io77")

[node name="Load_date_text" type="Label" parent="Right_menu/Main/Model_load_date"]
custom_minimum_size = Vector2(28, 20)
layout_mode = 2
theme = ExtResource("1_ivjal")
theme_override_font_sizes/font_size = 13
text = "ДАТА ЗАГРУЗКИ"

[node name="Space9" type="Panel" parent="Right_menu/Main"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
theme = ExtResource("2_4io77")

[node name="Model_load_date_placeholder" type="HBoxContainer" parent="Right_menu/Main"]
layout_mode = 2
theme = ExtResource("1_ivjal")

[node name="Space" type="Panel" parent="Right_menu/Main/Model_load_date_placeholder"]
custom_minimum_size = Vector2(58, 0)
layout_mode = 2
theme = ExtResource("2_4io77")

[node name="Load_date_edit" type="LineEdit" parent="Right_menu/Main/Model_load_date_placeholder"]
custom_minimum_size = Vector2(112, 31)
layout_mode = 2
theme = ExtResource("1_ivjal")
placeholder_text = "Введите дату загрузки"
max_length = 52
expand_to_text_length = true
caret_blink = true

[node name="Hs_Load_date" type="ColorRect" parent="Right_menu/Main/Model_load_date_placeholder/Load_date_edit"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 0
offset_left = -56.0
offset_top = 13.0
offset_right = -15.0
offset_bottom = 15.0
theme = ExtResource("1_ivjal")
color = Color(0.54902, 0.576471, 0.603922, 1)

[node name="V_Load_date" type="ColorRect" parent="Right_menu/Main/Model_load_date_placeholder/Load_date_edit"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 0
offset_left = -56.0
offset_top = -10.0
offset_right = -31.0
offset_bottom = -8.0
rotation = 1.5708
theme = ExtResource("1_ivjal")
color = Color(0.54902, 0.576471, 0.603922, 1)

[node name="HL_Load_date" type="ColorRect" parent="Right_menu/Main/Model_load_date_placeholder/Load_date_edit"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 0
offset_left = -58.0
offset_top = -12.0
offset_right = 527.0
offset_bottom = -10.0
theme = ExtResource("1_ivjal")
color = Color(0.54902, 0.576471, 0.603922, 1)

[node name="Space12" type="Panel" parent="Right_menu/Main"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
theme = ExtResource("2_4io77")

[node name="Space10" type="Panel" parent="Right_menu/Main"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_4io77")

[node name="Save_Cancel_Delete" type="HBoxContainer" parent="Right_menu/Main"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme = ExtResource("1_ivjal")

[node name="Space" type="Panel" parent="Right_menu/Main/Save_Cancel_Delete"]
custom_minimum_size = Vector2(23, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="Save" type="Button" parent="Right_menu/Main/Save_Cancel_Delete"]
custom_minimum_size = Vector2(150, 46)
layout_mode = 2
theme = ExtResource("1_ivjal")
toggle_mode = true
button_group = ExtResource("6_3vntf")
text = "Сохранить"

[node name="H_Save" type="ColorRect" parent="Right_menu/Main/Save_Cancel_Delete/Save"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 0
offset_left = -36.0
offset_top = 22.0
offset_right = -10.0
offset_bottom = 24.0
theme = ExtResource("1_ivjal")
color = Color(0.54902, 0.576471, 0.603922, 1)

[node name="V_Save" type="ColorRect" parent="Right_menu/Main/Save_Cancel_Delete/Save"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 0
offset_left = -34.0
offset_top = 24.0
offset_right = 21.0
offset_bottom = 26.0
rotation = 1.5708
theme = ExtResource("1_ivjal")
color = Color(0.54902, 0.576471, 0.603922, 1)

[node name="Space2" type="Panel" parent="Right_menu/Main/Save_Cancel_Delete"]
custom_minimum_size = Vector2(57, 0)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_4io77")

[node name="Cancel" type="Button" parent="Right_menu/Main/Save_Cancel_Delete"]
custom_minimum_size = Vector2(150, 46)
layout_mode = 2
theme = ExtResource("1_ivjal")
toggle_mode = true
button_group = ExtResource("6_3vntf")
text = "Отменить"

[node name="H_Cancel" type="ColorRect" parent="Right_menu/Main/Save_Cancel_Delete/Cancel"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 0
offset_left = -36.0
offset_top = 22.0
offset_right = -10.0
offset_bottom = 24.0
theme = ExtResource("1_ivjal")
color = Color(0.54902, 0.576471, 0.603922, 1)

[node name="V_Cancel" type="ColorRect" parent="Right_menu/Main/Save_Cancel_Delete/Cancel"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 0
offset_left = -34.0
offset_top = 24.0
offset_right = 21.0
offset_bottom = 26.0
rotation = 1.5708
theme = ExtResource("1_ivjal")
color = Color(0.54902, 0.576471, 0.603922, 1)

[node name="Space3" type="Panel" parent="Right_menu/Main/Save_Cancel_Delete"]
custom_minimum_size = Vector2(57, 0)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_4io77")

[node name="Delete" type="Button" parent="Right_menu/Main/Save_Cancel_Delete"]
custom_minimum_size = Vector2(150, 46)
layout_mode = 2
theme = ExtResource("7_867c3")
toggle_mode = true
button_group = ExtResource("6_3vntf")
text = "Удалить"

[node name="H_Delete" type="ColorRect" parent="Right_menu/Main/Save_Cancel_Delete/Delete"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 0
offset_left = -36.0
offset_top = 22.0
offset_right = -10.0
offset_bottom = 24.0
theme = ExtResource("7_867c3")
color = Color(0.619608, 0.498039, 0.498039, 1)

[node name="V_Delete" type="ColorRect" parent="Right_menu/Main/Save_Cancel_Delete/Delete"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 0
offset_left = -34.0
offset_top = 24.0
offset_right = 21.0
offset_bottom = 26.0
rotation = 1.5708
theme = ExtResource("7_867c3")
color = Color(0.619608, 0.498039, 0.498039, 1)

[node name="Space11" type="Panel" parent="Right_menu/Main"]
custom_minimum_size = Vector2(0, 33)
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("2_4io77")

[node name="Close_button" type="Button" parent="Right_menu"]
custom_minimum_size = Vector2(34, 32)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -51.8562
offset_top = 17.0121
offset_right = -17.8562
offset_bottom = 49.0121
grow_horizontal = 0
theme = ExtResource("4_nopp8")
icon = ExtResource("8_7w183")
icon_alignment = 1

[node name="Shadow" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.665104
anchor_bottom = 1.00093
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_am6s6")
metadata/_edit_use_anchors_ = true

[connection signal="toggled" from="Right_menu/Main/Load/Load/Load/Load" to="." method="_on_load_toggled"]
[connection signal="focus_entered" from="Right_menu/Main/Model_name_placeholder/Name_edit" to="." method="_on_name_edit_focus_entered"]
[connection signal="focus_exited" from="Right_menu/Main/Model_name_placeholder/Name_edit" to="." method="_on_name_edit_focus_exited"]
[connection signal="focus_entered" from="Right_menu/Main/Model_control_sum_placeholder/Control_sum_edit" to="." method="_on_control_sum_edit_focus_entered"]
[connection signal="focus_exited" from="Right_menu/Main/Model_control_sum_placeholder/Control_sum_edit" to="." method="_on_control_sum_edit_focus_exited"]
[connection signal="focus_entered" from="Right_menu/Main/Model_author_placeholder/author_edit" to="." method="_on_author_edit_focus_entered"]
[connection signal="focus_exited" from="Right_menu/Main/Model_author_placeholder/author_edit" to="." method="_on_author_edit_focus_exited"]
[connection signal="focus_entered" from="Right_menu/Main/Model_load_date_placeholder/Load_date_edit" to="." method="_on_load_date_edit_focus_entered"]
[connection signal="focus_exited" from="Right_menu/Main/Model_load_date_placeholder/Load_date_edit" to="." method="_on_load_date_edit_focus_exited"]
[connection signal="focus_entered" from="Right_menu/Main/Save_Cancel_Delete/Save" to="." method="_on_save_focus_entered"]
[connection signal="focus_exited" from="Right_menu/Main/Save_Cancel_Delete/Save" to="." method="_on_save_focus_exited"]
[connection signal="mouse_entered" from="Right_menu/Main/Save_Cancel_Delete/Save" to="." method="_on_save_mouse_entered"]
[connection signal="mouse_exited" from="Right_menu/Main/Save_Cancel_Delete/Save" to="." method="_on_save_mouse_exited"]
[connection signal="pressed" from="Right_menu/Main/Save_Cancel_Delete/Save" to="." method="_on_save_pressed"]
[connection signal="focus_entered" from="Right_menu/Main/Save_Cancel_Delete/Cancel" to="." method="_on_cancel_focus_entered"]
[connection signal="focus_exited" from="Right_menu/Main/Save_Cancel_Delete/Cancel" to="." method="_on_cancel_focus_exited"]
[connection signal="mouse_entered" from="Right_menu/Main/Save_Cancel_Delete/Cancel" to="." method="_on_cancel_mouse_entered"]
[connection signal="mouse_exited" from="Right_menu/Main/Save_Cancel_Delete/Cancel" to="." method="_on_cancel_mouse_exited"]
[connection signal="pressed" from="Right_menu/Main/Save_Cancel_Delete/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="focus_entered" from="Right_menu/Main/Save_Cancel_Delete/Delete" to="." method="_on_delete_focus_entered"]
[connection signal="focus_exited" from="Right_menu/Main/Save_Cancel_Delete/Delete" to="." method="_on_delete_focus_exited"]
[connection signal="mouse_entered" from="Right_menu/Main/Save_Cancel_Delete/Delete" to="." method="_on_delete_mouse_entered"]
[connection signal="mouse_exited" from="Right_menu/Main/Save_Cancel_Delete/Delete" to="." method="_on_delete_mouse_exited"]
[connection signal="pressed" from="Right_menu/Main/Save_Cancel_Delete/Delete" to="." method="_on_delete_pressed"]
